Fixed overflow

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-  background-color: rgb(252, 212, 124)
+  background-color: rgb(235, 127, 94)
 }
 
 .grid {
@@ -28,6 +28,7 @@
   border-radius: 5px;
   padding: 10px;
   box-shadow: 20px 20px 10px grey;
+  overflow: hidden;
 
   
 }
@@ -36,7 +37,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color:rgb(252, 212, 124);
+  background-color:rgb(235, 127, 94);
   /* padding: 5px; */
   width: 45rem;
   height: 45rem;
